Update server-side setup instructions based on lwjgl3ify documentation