@@ -38,11 +38,22 @@ Required to bypass module encapsulation and for optimal GC performance:
 - `README.md`: Human-readable overview.
 - `AI_CONTEXT.md`: This file.
 
+## Recommended Setup: Prism Launcher + Java 25
+For full Java 25 compatibility on 1.7.10, the following setup is mandatory:
+1. **Prism Instance**: Create via `packwiz curseforge export` zip.
+2. **LWJGL 3 Patch**: Download and extract [lwjgl3ify-3.0.11-multimc.zip](https://github.com/GTNewHorizons/lwjgl3ify/releases/download/3.0.11/lwjgl3ify-3.0.11-multimc.zip) into the instance folder, overwriting `mmc-pack.json`.
+3. **Java**: Use Java 25 with the recommended JVM flags below.
+4. **Mods**: Ensure `lwjgl3ify.jar`, `archaicfix.jar`, `hodgepodge.jar`, `angelica.jar`, and `unimixins.jar` are present in `mods/`.
+
+## Mandatory Server Setup (Java 17-25)
+1. **Forge Patches**: Download [lwjgl3ify-3.0.11-forgePatches.jar](https://github.com/GTNewHorizons/lwjgl3ify/releases/download/3.0.11/lwjgl3ify-3.0.11-forgePatches.jar) and rename to `lwjgl3ify-forgePatches.jar`.
+2. **Launch Wrapper**: Use `lwjgl3ify-forgePatches.jar` as the entry point instead of the standard Forge jar.
+3. **Java Args**: Load from `java9args.txt` using the `@java9args.txt` syntax.
+4. **Content**: Ensure `java9args.txt` contains the RFB system class loader and all mandatory `--add-opens` flags.
+
 ## Developer Notes
 - GregTech 6 is hosted externally; updates must be checked manually at `https://gregtech.overminddl1.com/1.7.10/`.
 - Packwiz allows for easy Git integration for version control of the modpack metadata.
-- **Recommended Setup**: Prism Launcher + Java 25 + LWJGL3ify (included) + Generational ZGC.
-- **Mandatory LWJGL 3 Patch**: Download [lwjgl3ify-3.0.11-multimc.zip](https://github.com/GTNewHorizons/lwjgl3ify/releases/download/3.0.11/lwjgl3ify-3.0.11-multimc.zip) and extract it to the instance folder (overwrite `mmc-pack.json`) to correctly enable LWJGL 3 on 1.7.10.
 
 ## Git Commit Guidelines
 Any AI assisting with this project MUST create git commits after performing significant changes (adding/removing mods, updating configs, updating docs).
